--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#000000</color>
+    <color name="my_dark_primary">#000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_light_primary">#FFFFFFFF</color>
+    <color name="gray">#A9A9A9</color>
+    <color name="blue">#0000FF</color>
 </resources>
