--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="my_light_primary">#FFFFFFFF</color>
     <color name="gray">#A9A9A9</color>
     <color name="blue">#0000FF</color>
+    <color name="grays">#808080</color>
+    <color name="red">#FF0000</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
 </resources>
