finished create layout bpost

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,27 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/tabler_home_filled"
         android:title="@string/home"/>
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/majesticons_search"
         android:title="@string/search"/>
 
     <item
-        android:id="@+id/bpost"
+        android:id="@+id/bpostFragment"
         android:icon="@drawable/iconoir_app_notification_solid"
         android:title="@string/bpost"/>
 
     <item
-        android:id="@+id/fav"
+        android:id="@+id/notificationFragment"
         android:icon="@drawable/ri_notification_4_fill"
         android:title="@string/notifictaion"/>
 
     <item
-        android:id="@+id/profile"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/iconamoon_profile_fill"
         android:title="@string/profile"/>
 
