--- a/app/src/main/res/layout/fragment_b_post.xml
+++ b/app/src/main/res/layout/fragment_b_post.xml
@@ -139,8 +139,17 @@
                 android:id="@+id/ivAddImage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_add_image"
+                android:src="@drawable/solar_gallery_wide_bold_1"
                 android:contentDescription="@string/add_image"
+                android:padding="8dp" />
+
+            <ImageView
+                android:id="@+id/ivCamera"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/jam_camera_alt_f_1"
+                android:hapticFeedbackEnabled="true"
+                android:contentDescription="@string/add_camera"
                 android:padding="8dp" />
 
             <ImageView
@@ -202,6 +211,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp" />
+
+        <!-- Progress Bar -->
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:indeterminate="true" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
