--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,6 +39,9 @@
         <action
             android:id="@+id/action_homeFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_detailBPostFragment"
+            app:destination="@id/bpostDetailFragment" />
     </fragment>
 
     <fragment
@@ -58,6 +61,18 @@
         android:name="com.raihanardila.bapps.ui.profile.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
+    <action
+        android:id="@+id/action_profileFragment_to_settingsFragment"
+        app:destination="@id/settingsFragment" />
+
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.raihanardila.bapps.ui.settings.SettingsFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_settings" />
+    <action
+        android:id="@+id/action_settingsFragment_to_loginFragment"
+        app:destination="@id/loginFragment" />
 
     <fragment
         android:id="@+id/bpostFragment"
@@ -65,8 +80,18 @@
         android:label="BPost"
         tools:layout="@layout/fragment_b_post">
         <action
-
             android:id="@+id/action_bpostFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/bpostDetailFragment"
+        android:name="com.raihanardila.bapps.ui.story.BPostDetailFragment"
+        android:label="BPost"
+        tools:layout="@layout/fragment_b_post_detail">
+        <action
+            android:id="@+id/action_bpostFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+
 </navigation>
