--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="activity_horizontal_margin">48dp</dimen>
+    <dimen name="toolbar_image_margin_end">16dp</dimen>
+    <dimen name="toolbar_height">16dp</dimen>
 </resources>
