--- a/app/src/main/res/xml/fragment_splash_scene.xml
+++ b/app/src/main/res/xml/fragment_splash_scene.xml
@@ -4,13 +4,11 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
-        motion:duration="5000">
-        <OnSwipe
-            motion:dragDirection="dragUp"
-            motion:touchAnchorId="@id/imageView"
-            motion:touchAnchorSide="top" />
+        motion:constraintSetEnd="@+id/start"
+        motion:constraintSetStart="@+id/end"
+        motion:duration="1245"
+        motion:autoTransition="animateToStart">
+        <!-- Removed OnSwipe to use autoTransition -->
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -23,7 +21,7 @@
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent"
             android:scaleX="0.5"
-            android:scaleY="0.5" />
+            android:scaleY="0.5" motion:transitionEasing="standard"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
